DS-3531 Fixed On Demand submission review window is too wide for mobile.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -475,7 +475,7 @@ ul {
 }
 
 $background-color: $asf-primary-light;
-$d-width: 500px;
+$d-width: 400px;
 $d-height: 500px;
 
 #ConfirmProcess {
